manifests/base/05-catalogue-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
  labels:
    name: catalogue
  namespace: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: catalogue
  template:
    metadata:
      labels:
        name: catalogue
    spec:
      containers:
        - name: catalogue
          image: quay.io/powercloud/sock-shop-catalogue:latest
          imagePullPolicy: IfNotPresent
          command: [ "/opt/app" ]
          args:
            - -port=8080
            - -DSN=root:demo123@tcp(catalogue-db:3306)/socksdb
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            capabilities:
              drop:
                - all
            readOnlyRootFilesystem: true
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 300
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 3
      nodeSelector:
        node-role.kubernetes.io/worker: ""
